# rustic_scheduler

./: .gitignore  .justfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  deny.toml  dist-workspace.toml  justfile  release.toml
.github/workflows/: audit.yml  check-and-lint.yaml  ci.yml  cross-ci.yml  nightly.yml  prebuilt-pr.yml  release-cd.yml  release-ci.yml  release-pr.yml  release.yaml  tests.yaml
config/: rustic_scheduler.toml
src/: application.rs  client.rs  commands.rs  config.rs  lib.rs  message.rs  prelude.rs  scheduler.rs  server.rs
src/commands/: client.rs  server.rs
templates/: client.stpl
tests/: acceptance.rs
wix/: main.wxs
