[package]
name = "rustic_scheduler"
version = "0.1.0"
categories = ["command-line-utilities"]
edition = "2021"
homepage = "https://rustic.cli.rs/"
keywords = [
  "backup",
  "restic",
  "deduplication",
  "encryption",
  "cli",
  "scheduler",
]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rustic-rs/rustic_scheduler"
description = """
rustic scheduler - a client/server application to schedule regular backups on
many clients to one identical repository controlled by a central scheduling
server.
"""

[[bin]]
name = "rustic-scheduler-server"
path = "src/bin/rustic-scheduler-server.rs"

[[bin]]
name = "rustic-scheduler-client"
path = "src/bin/rustic-scheduler-client.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.6.20", features = ["ws"] }
chrono = "0.4.31"
clap = "4"
clap_derive = "4.4.2"
cron = "0.12"
env_logger = "0.10"
gethostname = "0.4.3"
log = "0.4.20"
rustic_core = "0.1"
sailfish = "0.8"
serde = "1"
serde_derive = "1.0.188"
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"
tungstenite = "0.20"
url = "2.4"

# see: https://nnethercote.github.io/perf-book/build-configuration.html
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

# compile dependencies with optimizations in dev mode
# see: https://doc.rust-lang.org/stable/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
strip = true
panic = "abort"

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
