[package]
name = "rustic_scheduler"
version = "0.1.1"
authors = ["the rustic-rs team"]
categories = ["command-line-utilities"]
edition = "2021"
homepage = "https://rustic.cli.rs/"
keywords = [
  "backup",
  "restic",
  "cli",
  "scheduler",
]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rustic-rs/rustic_scheduler"
description = """
rustic scheduler - a client/server application to schedule regular backups on
many clients to one identical repository controlled by a central scheduling
server.
"""

[package.metadata.wix]
upgrade-guid = "C23C558D-97A1-454A-8B23-DA1368EE51A0"
path-guid = "D3BCB70C-354E-405C-A25E-431453E4CB58"
license = false
eula = false

[[bin]]
name = "rustic-scheduler-server"
path = "src/bin/rustic-scheduler-server.rs"

[[bin]]
name = "rustic-scheduler-client"
path = "src/bin/rustic-scheduler-client.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7.6", features = ["ws"] }
chrono = "0.4.38"
clap = "4"
clap_derive = "4.5.18"
cron = "0.12"
env_logger = "0.11"
gethostname = "0.5.0"
log = "0.4.22"
rustic_core = "0.1.2"
sailfish = "0.9"
serde = "1"
serde_derive = "1.0.210"
serde_json = "1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
tungstenite = "0.21"
url = "2.5"

[target.'cfg(not(windows))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[target.'cfg(windows)'.dependencies]
# unfortunately, the asm extensions do not build on Windows, see https://github.com/RustCrypto/asm-hashes/issues/17
# and https://github.com/RustCrypto/asm-hashes/pull/issues/78
sha2 = "0.10.8"

# see: https://nnethercote.github.io/perf-book/build-configuration.html
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

# compile dependencies with optimizations in dev mode
# see: https://doc.rust-lang.org/stable/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
strip = true
panic = "abort"

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
